# VCMTicketing

./: README.md  pyproject.toml
vcm_ticketing/: api.py  hooks.py  modules.txt
vcm_ticketing/vcm_ticketing/dashboard_chart/facility_active_tickets/: facility_active_tickets.json
vcm_ticketing/vcm_ticketing/dashboard_chart/facility_department_summary/: facility_department_summary.json
vcm_ticketing/vcm_ticketing/dashboard_chart/facility_ticket_summary/: facility_ticket_summary.json
vcm_ticketing/vcm_ticketing/dashboard_chart/it_agents_summary/: it_agents_summary.json
vcm_ticketing/vcm_ticketing/dashboard_chart/it_ticket_overview/: it_ticket_overview.json
vcm_ticketing/vcm_ticketing/dashboard_chart/it_ticket_status/: it_ticket_status.json
vcm_ticketing/vcm_ticketing/dashboard_chart/s&p_active_ticket/: s&p_active_ticket.json
vcm_ticketing/vcm_ticketing/dashboard_chart/s&p_agent_summary/: s&p_agent_summary.json
vcm_ticketing/vcm_ticketing/dashboard_chart/s&p_ticket_summary/: s&p_ticket_summary.json
vcm_ticketing/vcm_ticketing/doctype/vcm_ticketit/: test_vcm_ticketit.py  vcm_ticketit.js  vcm_ticketit.json  vcm_ticketit.py
vcm_ticketing/vcm_ticketing/doctype/vcm_ticketsp/: test_vcm_ticketsp.py  vcm_ticketsp.js  vcm_ticketsp.json  vcm_ticketsp.py
vcm_ticketing/vcm_ticketing/doctype/vcmticketfacility/: test_vcmticketfacility.py  vcmticketfacility.js  vcmticketfacility.json  vcmticketfacility.py
vcm_ticketing/vcm_ticketing/vcm_ticketing_dashboard/vcm_facility_ticket/: vcm_facility_ticket.json
vcm_ticketing/vcm_ticketing/workspace/it_agents/: it_agents.json
(+7 files in other folders)
